--- a/packages/mgt-components/src/components/mgt-organization/mgt-organization.theme.scss
+++ b/packages/mgt-components/src/components/mgt-organization/mgt-organization.theme.scss
@@ -15,4 +15,8 @@ $organization-active-org-member-target-background-color: var(
   --organization-active-org-member-target-background-color,
   var(--neutral-fill-active)
 );
-$organization-coworker-hover-color: var(--organization-coworker-hover-color, var(-neutral-fill-hover));
+$organization-coworker-hover-color: var(--organization-coworker-hover-color, var(--neutral-fill-hover));
+$organization-coworker-border-color: var(--organization-coworker-border-color, var(--neutral-stroke-rest));
+$organization-title-color: var(--organization-title-color, var(--neutral-foreground-rest));
+$organization-sub-title-color: var(--organization-sub-title-color, var(--neutral-foreground-hint));
+$organization-hover-color: var(--organization-hover-color, var(--neutral-fill-hover));
